# low_code_lambda

./: Cargo.toml  Dockerfile  README.md  aws_push.sh  build.sh  ecr_manifest.json
.github/workflows/: main.yml  publish.yml  pull_request.yml
lcl-dynamodb-export/: Cargo.toml  README.md
lcl-dynamodb-export/src/: event_handler.rs  main.rs
